--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,19 @@
     android:padding="10dp"
     tools:context="com.anagaf.uselessrestclient.view.MainActivity">
 
+    <Button
+        android:id="@+id/retrieve_users"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Retrieve Users"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/retrieve_users"
+        android:layout_marginBottom="10dp"
         android:scrollbars="vertical"
         android:visibility="gone"
         />
@@ -30,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:visibility="gone"
         />
 
 
