--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="10dp"
     tools:context="com.anagaf.uselessrestclient.view.MainActivity">
+
+    <FrameLayout
+        android:id="@+id/content_container"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginBottom="10dp"
+        />
 
     <Button
         android:id="@+id/retrieve_users"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:text="Retrieve Users"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/users"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/retrieve_users"
-        android:layout_marginBottom="10dp"
-        android:scrollbars="vertical"
-        android:visibility="gone"
-        />
-
-    <TextView
-        android:id="@+id/error_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:visibility="gone"
-        />
-
-    <ProgressBar
-        android:id="@+id/progress"
-        style="@android:style/Widget.ProgressBar.Large.Inverse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        />
-
-
-</RelativeLayout>
+</LinearLayout>
