--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ProgressBar
+    android:id="@+id/progress"
     style="@android:style/Widget.ProgressBar.Large.Inverse"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
